--- a/Base Emulator/Makefile
+++ b/Base Emulator/Makefile
@@ -1,4 +1,3 @@
 build:
-	nasm -f elf64 -gstabs -o arqui.o arqui.asm
-	ld -o arqui arqui.o
-	gdb arqui
+	nasm -f elf64 -o emu.o emu.asm
+	ld -o emu emu.o
