commit on 'master'

--- a/Base Emulator/MakefileDebug
+++ b/Base Emulator/MakefileDebug
@@ -1,4 +1,4 @@
 build:
-	nasm -f elf64 -gstabs -o arqui.o arqui.asm
-	ld -o arqui arqui.o
-	gdb arqui
+	nasm -f elf64 -gstabs -o emu.o emu.asm
+	ld -o emu emu.o
+	gdb emu
